# Mesk

./: ChangeLog  Makefile.in  NEWS  README.in  THANKS  acsite.m4  autogen.sh  configure  configure.ac  launch.sh.in  setup.py.in
doc/: mesk.1.in
etc/: doxygen.conf  mesk-0.3.99.ebuild  mesk.desktop.in
po/: Makefile.in  POTFILES.in  mesk.pot  sv.mo  sv.po
scripts/: mesk.in
sql/: setupdb-sqlite.sql
src/: about_dialog.py  album_cover_control.py  audio_control.py  cdrom_control.py  config.py  control.py  dbus_service.py  devices.py  dialogs.py  log_window.py  main.py  main_window.py  playlist_control.py  playlist_export.py  preference_window.py  status_bar.py  status_icon.py
src/data/glade/: about_dialog.glade  about_dialog.ui  audio_control.glade  main_window.glade  playlist.glade  playlist.ui  preference_window.glade
src/mesk/: __init__.py  config.py  gst_player.py  gtk_utils.py  i18n.py  info.py.in  log.py  uri.py  utils.py  window.py
src/mesk/audio/: __init__.py  cdaudio.py  mpeg.py  oggvorbis.py  source.py
src/mesk/database/: __init__.py  albums.py  artists.py  database.py  genres.py  info.py  tracks.py
src/mesk/playlist/: __init__.py  m3u.py  pls.py  xspf.py
src/mesk/plugin/: __init__.py  interfaces.py  plugin.py
src/plugins/: albumart.py  amazon.py  audioscrobbler.py  gajimstatus.py  lyrics.py  plugins_gui.glade
